# sdl-pong

./: .clang-format  .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  build-wasm.sh  build-website.py  build.sh  game.html  game.js  game.wasm  index.html  main.c
assets/: index.html
src/: digits.c  digits.h  font.c  font.h  game.c  game.h  main.c  math.c  math.h  renderer.c  renderer.h  tonegen.c  tonegen.h
src/emscripten/: shell.html
src/web/: shell.html
src/website/: game.html  index.html  shell.html  tennis.html
